tests/baselines/reference/collisionThisExpressionAndModuleInGlobal.errors.txt
==== tests/cases/compiler/collisionThisExpressionAndModuleInGlobal.ts (1 errors) ====
    module _this { //Error
           ~~~~~
!!! collisionThisExpressionAndModuleInGlobal.ts(1,8): error TS2206: Expression resolves to variable declaration '_this' that compiler uses to capture 'this' reference.
        class c {
        }
    }
    var f = () => this;